Renommage du fichier ConnectionPostgressql en ConnectionMySQL et preparation des fichiers pour le deploiement