@@ -6,8 +6,9 @@
 
     <groupId>com.mamadou</groupId>
     <artifactId>trombinoscope</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>trombinoscope</name>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,12 +19,12 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>21</version>
+            <version>21.0.11</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>21</version>
+            <version>21.0.11</version>
         </dependency>
         <!-- Source: https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
         <dependency>
@@ -73,6 +74,45 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.6.3</version>
+                <executions>
+                    <execution>
+                        <id>package-windows</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>jpackage</executable>
+                            <arguments>
+                                <argument>--type</argument>
+                                <argument>exe</argument>
+                                <argument>--name</argument>
+                                <argument>Trombinoscope</argument>
+                                <argument>--app-version</argument>
+                                <argument>1.0</argument>
+                                <argument>--input</argument>
+                                <argument>${project.build.directory}</argument>
+                                <argument>--main-jar</argument>
+                                <argument>${project.build.finalName}.jar</argument>
+                                <argument>--main-class</argument>
+                                <argument>com.mamadou.trombinoscope.MainApp</argument>
+                                <argument>--module-path</argument>
+                                <argument>C:\Users\ZO\Documents\javafx-lib</argument>
+                                <argument>--add-modules</argument>
+                                <argument>javafx.controls,javafx.fxml,java.sql</argument>
+                                <argument>--win-dir-chooser</argument>
+                                <argument>--win-shortcut</argument>
+                                <argument>--win-console</argument>
+                            </arguments>
                         </configuration>
                     </execution>
                 </executions>
